--- a/src/index.css
+++ b/src/index.css
@@ -466,7 +466,7 @@ body.active {
 }
 
 .create-game {
-  /* padding: var(--section-padding) 0 120px; */
+  padding: var(--section-padding) 0 120px;
 }
 
 .create-game-card {
@@ -517,6 +517,26 @@ body.active {
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.mini-spinner {
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  padding: 0.5px;
+  background: conic-gradient(#0000 10%,#d9d9de) content-box;
+  -webkit-mask: repeating-conic-gradient(#0000 0deg,#000 1deg 20deg,#0000 21deg 36deg),
+       radial-gradient(farthest-side,#0000 calc(100% - 3.8px),#000 calc(100% - 3.8px));
+  -webkit-mask-composite: destination-in;
+  mask-composite: intersect;
+  animation: spinner-d55elj 0.6s infinite steps(10);
+}
+
+@keyframes spinner-d55elj {
+  to {
+     transform: rotate(1turn);
+  }
+}
+
 
 @media (min-width: 420px) {
   :root {
